--- a/pages/StreamChatOverrides.css
+++ b/pages/StreamChatOverrides.css
@@ -2,7 +2,22 @@
   height: 100%;
 }
 
-.str-chat__message--me .str-chat__message-inner,
-.str-chat__message-simple--me .str-chat__message-inner {
-  margin-left: 10px;
+.str-chat__date-separator {
+  padding: 15px 18px;
+}
+
+.str-chat__message-livestream {
+  padding: 6px 6px;
+}
+
+.str-chat__message-livestream-left {
+  padding-top: 6px;
+}
+
+.str-chat__message-livestream-content {
+  padding: 0 10px;
+}
+
+.str-chat__message-livestream-author {
+  margin-bottom: 0;
 }
