Remove circle loader, change progress bar color

--- a/public/nprogress.css
+++ b/public/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #00aeef;
+  background: #85C471;
 
   position: fixed;
   z-index: 1031;
@@ -22,7 +22,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #00aeef, 0 0 5px #00aeef;
+  box-shadow: 0 0 10px #85C471, 0 0 5px #85C471;
   opacity: 1.0;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
