Fixed Retroica Font

--- a/pages/retroica.css
+++ b/pages/retroica.css
@@ -1,6 +1,6 @@
 /* Regular */
 @font-face {
-  font-family: 'Proxima-Nova';
+  font-family: 'Retroica';
   src: url('/fonts/retroica/Retroica.ttf');
 
   font-style: normal;
