--- a/pages/vision.css
+++ b/pages/vision.css
@@ -1,7 +1,7 @@
 /* Thin */
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/thin.woff2');
+  src: url('/fonts/vision/thin.otf');
 
   font-style: normal;
   font-weight: 100;
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/thin-it.woff2');
+  src: url('/fonts/vision/thin-it.otf');
 
   font-style: italic;
   font-weight: 100;
@@ -20,7 +20,7 @@
 /* Light */
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/light.woff2');
+  src: url('/fonts/vision/light.otf');
 
   font-style: normal;
   font-weight: 200;
@@ -29,7 +29,7 @@
 
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/light-it.woff2');
+  src: url('/fonts/vision/light-it.otf');
 
   font-style: italic;
   font-weight: 200;
@@ -39,7 +39,7 @@
 /* Regular */
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/regular.woff2');
+  src: url('/fonts/vision/regular.otf');
 
   font-style: normal;
   font-weight: 300;
@@ -48,7 +48,7 @@
 
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/regular-it.woff2');
+  src: url('/fonts/vision/regular-it.otf');
 
   font-style: italic;
   font-weight: 300;
@@ -58,7 +58,7 @@
 /* Bold */
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/bold.woff2');
+  src: url('/fonts/vision/bold.otf');
 
   font-style: normal;
   font-weight: 600;
@@ -67,7 +67,7 @@
 
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/bold-it.woff2');
+  src: url('/fonts/vision/bold-it.otf');
 
   font-style: italic;
   font-weight: 600;
@@ -77,7 +77,7 @@
 /* Black */
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/black.woff2');
+  src: url('/fonts/vision/black.otf');
 
   font-style: normal;
   font-weight: 800;
@@ -86,7 +86,7 @@
 
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/black-it.woff2');
+  src: url('/fonts/vision/black-it.otf');
 
   font-style: italic;
   font-weight: 800;
@@ -96,7 +96,7 @@
 /* Heavy */
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/heavy.woff2');
+  src: url('/fonts/vision/heavy.otf');
 
   font-style: normal;
   font-weight: 900;
@@ -105,7 +105,7 @@
 
 @font-face {
   font-family: 'Vision';
-  src: url('/fonts/vision/heavy-it.woff2');
+  src: url('/fonts/vision/heavy-it.otf');
 
   font-style: italic;
   font-weight: 900;
